--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,17 +1,107 @@
 <div class="page-header">
-  <h3>Board #<%= @board.id %></h3>
+  <h3>Board: <%= @board.title %> <small><%= @board.description %></small></h3>
 </div>
 
 <div class="row">
-  <div class="col-md-12 mb-2">
-    <dl class="dl-horizontal">
-      <dt>Title</dt>
-      <dd><%= @board.title %></dd>
+  <div class="col-md-10 col-md-offset-1 mb-2">
+    <div class=" panel panel-default">
+      <div class="panel-body">
+      <h3>Add a new list</h3>
+      <form action="/create_list" method="post">
+            <!-- Hidden input for authenticity token to protect from forgery -->
+            <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+            
+            <!-- Label and input for title -->
+            <div class="form-group">
+              <label for="title" class="control-label">
+                Title
+              </label>
+      
+              <input type="text" id="title" name="title" placeholder="Title" class="form-control">
+            </div>
+              <input type="hidden" id="board_id" name="board_id" value="<%= @board.id %>">
+              
+            
+            
+      
+            <button class="btn btn-default">
+              Create List
+            </button>
+            
+          </form>
+        </div>
+    </div>
+    
+   
+    <% @board.lists.each do |list| %>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h3><%= list.title %></h3>
+        
+        <% @board.cards.each do |card| %>
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2 mb-2">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title"><a href="/cards/<%= card.id %>" ><%= card.title %></a></h3>
+              </div>
+              <div class="panel-body">
+                <div class="lead">
+                  <%= card.description %>
+                </div>
+                <% @board.tags.each do |tag| %>
+                  <a href="/tags/<%= tag.id %>" class="label label-default"><%= tag.name %></a>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% end %>
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2 mb-2">
+            <form action="/create_card" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+              
+              <!-- Label and input for title -->
+              <div class="form-group">
+                <label for="title" class="control-label">
+                  Title
+                </label>
+        
+                <input type="text" id="title" name="title" placeholder="Title" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="description" class="control-label">
+                  Description
+                </label>
+        
+                <input type="text" id="description" name="description" placeholder="Description" class="form-control">
+              </div>
+                <input type="hidden" id="list_id" name="list_id" value="<%= list.id %>">
+                
+              
+              
+        
+              <button class="btn btn-default">
+                Create Card
+              </button>
+                
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <% end %>
+   
+    
+    
 
-      <dt>Description</dt>
-      <dd><%= @board.description %></dd>
 
-    </dl>
+
+
+
+
 
     <div class="btn-group btn-group-justified">
       <a href="/boards" class="btn btn-default">
